2009-08-13  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php:
	- (conversion_step1) Detect lilypond version and adjust command line
	  accordingly. Even lilypond command line options are unstable.
	- (lilypond_version) New func.

2009-08-08  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, wp-scorerender.php, scorerender-class.php:
	- Completely remove any variables and admin options to check maximum
	  length of music fragment. This number is not useful against abuse
	  nor eases resource usage.

2009-08-07  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php:
	- PHP documentation update.
	* scorerender-class.php:
	- Drop ERR_INTERNAL_CLASS, which is no more needed because of PHP
	  interface restriction.
	- Drop all method declarations already existed in ScoreRender class.
	* notation/mup.php, notation/abc.php:
	- (set_img_width) Use existing $img_max_width directly, instead of
	  using new variable.

2009-08-06  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php:
	- Fix function declaration.

2009-08-06  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Use positive numbers for error constants.
	- Utilize PHP interface to make sure each notation implements all
	  necessary methods.
	* notation/*.php:
	- Utilize PHP interface.
	* notation/guido.php:
	- Add all dummy functions necessary for PHP interface.

2009-08-04  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Move default setting definition to each notation file.
	- (scorerender_get_def_settings) Add hook for defining default
	  settings.
	- (scorerender_init_class, scorerender_conversion_hook) Adopt for
	  change of structure of $notations.
	* scorerender-class.php:
	- (set_img_width) Simplify string.
	* notation/*.php:
	- (is_notation_usable, program_setting_entry) Adopt for change of
	  structure of $notations.
	- (define_setting_type) New func.

2009-08-03  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: